--- a/roles/bunkerweb/templates/env.j2
+++ b/roles/bunkerweb/templates/env.j2
@@ -2,9 +2,9 @@ MULTISITE=yes
 HTTP_PORT=80
 HTTPS_PORT=443
 {% if enable_adguard_unbound_doh %}
-SERVER_NAME={{ authelia_host }} {{ wireguard_host }} {{ adguard_host }}
+SERVER_NAME={{ authelia_host }} {{ wireguard_host }} {{ adguard_host }} {{ bunkerweb_ui_host}}
 {% else %}
-SERVER_NAME={{ authelia_host }} {{ wireguard_host }}
+SERVER_NAME={{ authelia_host }} {{ wireguard_host }} {{ bunkerweb_ui_host}}
 {% endif %}
 SERVE_FILES=no
 DISABLE_DEFAULT_SERVER=yes
@@ -41,3 +41,10 @@ REVERSE_PROXY_HEADERS_999=X-Original-URL $scheme://$http_host$request_uri;Conten
 {{ adguard_host }}_REVERSE_PROXY_AUTH_REQUEST_SIGNIN_URL=https://{{ authelia_host }}/?rd=$scheme%3A%2F%2F$host$request_uri
 {{ adguard_host }}_REVERSE_PROXY_AUTH_REQUEST_SET=$user $upstream_http_remote_user;$groups $upstream_http_remote_groups;$name $upstream_http_remote_name;$email $upstream_http_remote_email
 {% endif %}
+# Bunkerweb-ui
+{{ bunkerweb_ui_host }}_REVERSE_PROXY_URL=/
+{{ bunkerweb_ui_host }}_REVERSE_PROXY_HOST=http://bunkerweb-ui:7000
+{{ bunkerweb_ui_host }}_REVERSE_PROXY_AUTH_REQUEST=/authelia
+{{ bunkerweb_ui_host }}_REVERSE_PROXY_AUTH_REQUEST_SIGNIN_URL=https://{{ authelia_host }}/?rd=$scheme%3A%2F%2F$host$request_uri
+{{ bunkerweb_ui_host }}_REVERSE_PROXY_AUTH_REQUEST_SET=$user $upstream_http_remote_user;$groups $upstream_http_remote_groups;$name $upstream_http_remote_name;$email $upstream_http_remote_email
+
